weird xl bug on navbar overflow-y

--- a/client/scss/custom/layout/navbar.scss
+++ b/client/scss/custom/layout/navbar.scss
@@ -32,7 +32,7 @@ $mobileBarOpacity: 0.9;
 #navi-nav {
     float: right;
     height:90vh;
-    @include media-breakpoint-down(xl){
+    @include media-breakpoint-down(lg){
         overflow-y:scroll;
     }
 }
